--- a/NVIDIA NOTEBOOKS/01 ai yi-large.ipynb
+++ b/NVIDIA NOTEBOOKS/01 ai yi-large.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "client = ChatNVIDIA(\n",
     "  model=\"01-ai/yi-large\",\n",
-    "  api_key=\"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\", \n",
+    "  api_key=\"your api key\", \n",
     "  temperature=0.2,\n",
     "  top_p=0.7,\n",
     "  max_tokens=1024,\n",
