--- a/NVIDIA NOTEBOOKS/Qwen 2.5 code Generation using NVIDIA.ipynb
+++ b/NVIDIA NOTEBOOKS/Qwen 2.5 code Generation using NVIDIA.ipynb
@@ -63,7 +63,7 @@
     "\n",
     "client = ChatNVIDIA(\n",
     "  model=\"qwen/qwen2.5-coder-32b-instruct\",\n",
-    "  api_key=\"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\", \n",
+    "  api_key=\"your api key\", \n",
     "  temperature=0.2,\n",
     "  top_p=0.7,\n",
     "  max_tokens=1024,\n",
