--- a/NVIDIA NOTEBOOKS/bigcode starcoder2-7b.ipynb
+++ b/NVIDIA NOTEBOOKS/bigcode starcoder2-7b.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "client = OpenAI(\n",
     "  base_url = \"https://integrate.api.nvidia.com/v1\",\n",
-    "  api_key = \"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\"\n",
+    "  api_key = \"you api key\"\n",
     ")\n",
     "\n",
     "completion = client.completions.create(\n",
