--- a/NVIDIA NOTEBOOKS/microsoft-phi-4-mini-instruct.ipynb
+++ b/NVIDIA NOTEBOOKS/microsoft-phi-4-mini-instruct.ipynb
@@ -51,7 +51,7 @@
     "\n",
     "client = ChatNVIDIA(\n",
     "  model=\"microsoft/phi-4-mini-instruct\",\n",
-    "  api_key=\"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\", \n",
+    "  api_key=\"your api key\", \n",
     "  temperature=0.1,\n",
     "  top_p=0.7,\n",
     "  max_tokens=1024,\n",
